refactor: Test List.of수정